PDF Output: Manually subset fonts to workaound https://bugreports.qt.io/browse/QTBUG-88976